--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
-      "shortcutName": "BWC Chat",
-      "installerIcon": "assets/icon.ico",
-      "uninstallerIcon": "assets/icon.ico"
+      "shortcutName": "BWC Chat"
     }
   }
 }
